--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "app-root-path": "^3.0.0",
+    "chart.js": "^3.6.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "26.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "superagent": "^6.1.0",
